--- a/pages/project.html
+++ b/pages/project.html
@@ -42,26 +42,17 @@
                         <img src="http://localhost:8080/static/Happy.png" alt="Happy-reminder" width="500">
                     </a>
                 </div>  
-                <div class="col  mt-1">
+                <div class="col  mt-1 mr-2">
                     <h2 class="pt-10 text-center"><b><a class="text-dark " href="https://github.com/Bennyjiangzy/Happy-reminders" target="_blank">Happy-reminders<i class="fab fa-github-square" style="color:white"></i></a></b></h2>  
+                    <p class="about mb-1 text-justify"><b>This app is made by JavaScript, Express.js, Node.js, Boostrap, MongoDB and it can provide a place for user to save important notes like online memo. Users also can view their friend
+                        s memo by the social system.</b>
+                    </p>
                     <ul>
-                        <li >Cras justo odio</li>
-                        <li >Dapibus ac facilisis in</li>
-                        <li >Morbi leo risus</li>
-                        <li>Porta ac consectetur ac</li>
-                        <li >Vestibulum at eros</li>
+                        <li ><b>Agile Development</b></li>
+                        <li ><b>Authentication system Passport.js</b></li>
+                        <li ><b>Social system</b></li>
                     </ul>
                     
-                </div>
-            </div>
-
-            <div class="row pl-2 mb-4">
-                <div class="col pt-3">
-                    <a class="ml-5 mt-5 ">
-                    </a>
-                </div>  
-                <div class="col  mt-1">
-
                 </div>
             </div>
 
@@ -72,14 +63,13 @@
                         <img src="http://localhost:8080/static/Pygame.png" alt="Happy-reminder" width="500">
                     </a>
                 </div>  
-                <div class="col ">
+                <div class="col mr-2 ">
                     <h2 class="pt-10 text-center"><b><a class="text-dark " href="https://github.com/Bennyjiangzy/Monster-Hunter-Fake" target="_blank">Monster-Hunter-Fake<i class="fab fa-github-square" style="color:white"></i></a></b></h2>  
+                    <p class="about mb-1"><b>This is a simple RPG game. Users can choose two weapons at the beginning. Defeating monsters can obtain gold for buying items and scores. After game is over, scores will be uploaded to a Flask website </b></p>
                     <ul>
-                        <li >Cras justo odio</li>
-                        <li >Dapibus ac facilisis in</li>
-                        <li >Morbi leo risus</li>
-                        <li>Porta ac consectetur ac</li>
-                        <li >Vestibulum at eros</li>
+                        <li ><b>MVC patterns</b></li>
+                        <li ><b>Pygame</b></li>
+                        <li ><b>Flask APIs</b></li>
                     </ul>
                     
                 </div>
