file link change

--- a/pages/Benny.html
+++ b/pages/Benny.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="/project">Project</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="http://localhost:8080/static/Benny Resume.pdf" target="_blank">View Resume</a>
+                        <a class="nav-link " href="/Resume" target="_blank">View Resume</a>
                     </li>
                     
                 </ul>
@@ -37,7 +37,7 @@
             <div class="row pt-2 pl-2">
                 <div class="col-3 avatar-cover">
                     <a class="ml-5 mt-5 cursor-default">
-                        <img src="http://localhost:8080/static/Benny.jpg" alt="Benny Jiang" width="210">
+                        <img src="/Me" alt="Benny Jiang" width="210">
                     </a>
                 </div>
                 <div class="avatar-texts col-9 text-center pt-5">
