--- a/pages/project.html
+++ b/pages/project.html
@@ -28,7 +28,7 @@
                         <a class="nav-link text-success" href="/project"><b>Project</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="http://localhost:8080/static/Benny Resume.pdf" target="_blank">View Resume</a>
+                        <a class="nav-link " href="/Resume" target="_blank">View Resume</a>
                     </li>
                     
                 </ul>
@@ -39,7 +39,7 @@
             <div class="row pl-2 mb-4">
                 <div class="col pt-3">
                     <a class="ml-5 mt-5 ">
-                        <img src="http://localhost:8080/static/Happy.png" alt="Happy-reminder" width="500">
+                        <img src="/Happy" alt="Happy-reminder" width="500">
                     </a>
                 </div>  
                 <div class="col  mt-1 mr-2">
@@ -60,7 +60,7 @@
             <div class="row pl-2 mt-5">
                 <div class="col pt-2">
                     <a class="ml-5 mt-5">
-                        <img src="http://localhost:8080/static/Pygame.png" alt="Happy-reminder" width="500">
+                        <img src="/Pygame" alt="Happy-reminder" width="500">
                     </a>
                 </div>  
                 <div class="col mr-2 ">
