--- a/pages/Benny.html
+++ b/pages/Benny.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
 
-        <section class="bg-info  " style="height:250px;">
+        <section style="height:250px;background-color:MediumSeaGreen">
             <div class="row pt-2 pl-2">
                 <div class="col-3 avatar-cover">
                     <a class="ml-5 mt-5 cursor-default">
