--- a/pages/project.html
+++ b/pages/project.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/books_1f4da.png">
     
     <title>Benny's home</title>
+
 </head>
 
 <body>
@@ -35,7 +36,7 @@
             </div>
         </nav>
 
-        <section class="bg-info  " style="height:750px;">
+        <section style="height:690px;background-color:MediumSeaGreen;">
             <div class="row pl-2 mb-4">
                 <div class="col pt-3">
                     <a class="ml-5 mt-5 ">
@@ -76,30 +77,40 @@
             </div>
         </section>
         <section class=" h-25 p-5 roboto shadow rounded">
-            <div class="row">
-                <div class="about-me col-6">
-                    <div class="p-2 pt-3">
-                        <h5> <b>About Me</b> </h5>
-                        <p class="about">Came to Vancouver in 2017 and study to code in 2019. Now I am a student in Computer Information Technology program at BCIT (Co-op). Love to code and test.</p>
-                    </div>
+            <div class="text-center pr-1"><h3><b>Skills</b></h3></div>
+                <div class="d-flex mr-5 ml-5 pl-5 pr-5 justify-content-between" >
+                    <ul>
+                        <li style="list-style: none;"><b>😊Feel Good</b></li>
+                        <li >Python</li>
+                        <li >JavaScript</li>
+                        <li >HTML</li>
+                        <li >Bootstrap</li>
+                        <li >EJS</li>
+                        <li >Express</li>
+                        <li >Git</li>
+                        <li >Agile</li>
+                    </ul>
+
+                    <ul>
+                        <li style="list-style: none;"><b>😀Enough For Use</b></li>
+                        <li >Linux Bash</li>
+                        <li >Windows</li>
+                        <li >Wireshark</li>
+                        <li >MongoDB</li>
+                        <li >SQL</li>
+                        <li >Figma</li>
+                    </ul>
+
+                    <ul>
+                        <li style="list-style: none;"><b>💡Current Learning</b></li>
+                        <li >AWS</li>
+                        <li >MySQL</li>
+                        <li >Applied algorithms</li>
+                        <li >Win Server 2019</li>
+                        <li >React</li>
+                    </ul>
                 </div>
-                <div class="addresses col-6 pl-5">
-                    <table style="border-collapse: separate;  border-spacing: 0.5em;">
-                        <tbody><tr>
-                            <td>School-Email</td>
-                            <td class="pl-5 address-items"><a href="#" class="text-success">zjiang35@my.bcit.ca</a></td>
-                        </tr>
-                        <tr>
-                            <td>Personal-Email</td>
-                            <td class="pl-5 address-items"><a href="" class="text-success">Bennyjiangzy@gmail.com</a></td>
-                        </tr>
-                        <tr>
-                            <td>Phone</td>
-                            <td class="pl-5 address-items"><a href="" class="text-success">1-236-984-9623</a></td>
-                        </tr>
-                    </tbody></table>
-                </div>
-            </div>
+          
         </section>
    
 <footer class="text-center bg-dark text-white mt-5 p-2">
