--- a/pages/Benny.html
+++ b/pages/Benny.html
@@ -50,6 +50,7 @@
                         <h2 class="d-inline pr-2 linkedin"><a href="https://www.linkedin.com/in/ziyan-jiang/" target="_blank"><i class="fab fa-linkedin social" style="font-size:36px;color:white"></i></a></h2>
                         <h2 class="d-inline pr-2 github"><a href="https://github.com/Bennyjiangzy" target="_blank"><i class="fab fa-github-square" style="font-size:36px;color:white"></i></a></h2>
                     </div>
+                    <a href="/project"><b>View My Projects</b></a>
                 </div>
             </div>
         </section>
